Added logs volume to docker compose
+ App won't lunch if volume is not defined

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     volumes:
       - ./servers:/servers
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./logs/backend:/app/logs
     environment:
       MARIADB_USER: lgsm_webpanel
       MARIADB_PASSWORD: password
